compiler/tools/fpp-check/test/state_machine/undef/choice_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/undef/choice_error.fpp:3.17
  initial enter C
                ^
error: symbol C is not defined
note: looking for a state here
